# Verite-Suite

./: .gitignore  EULA.txt  NOTICE  build.gradle.kts  settings.gradle.kts
eve/: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  LinuxLive.java  ScanTest.java  strip_comments.py
eve/.github/workflows/: build.yml
eve/docker/: Dockerfile.linux
eve/java/teacommontea/eve/: Eve.java
eve/jni/: eve_jni.cpp
eve/oracle/: FpTest.java  OracleGen.java  jsonl_to_eve.py  jsonl_to_extendaeve.py
eve/src/: eve.cpp  eve.hpp  eve_compile.cpp  eve_expanda.cpp  eve_expanda.hpp  eve_lang.cpp  eve_lang.hpp  eve_strict.cpp  eve_strict.hpp
eve/test/: config_en_live.eve  conformance.cpp  conformance_eve.cpp  langtest.cpp  stricttest.cpp
eve/tools/: bisect.cpp  run_expanda.cpp
src/main/java/teacommontea/: VeritePlugin.java
src/main/java/teacommontea/Veritechasse/: AntiCheat.java  SnapshotCapture.java  VeritePlugin.java
src/main/java/teacommontea/Veritechasse/api/: CaptchaCompleteEvent.java  CaptchaKind.java  CaptchaOutcome.java  PunishmentRequestedEvent.java  Verite.java
src/main/java/teacommontea/Veritechasse/check/: BlockBreakCheck.java  BlockPlaceCheck.java  Check.java  CheckFamily.java  CheckHolder.java  CheckInfo.java  PacketCheck.java  (+3 more)
src/main/java/teacommontea/Veritedoux/: SelfHeal.java  Sieve.java  SieveCommands.java  SieveLang.java  SieveSegment.java  SieveSettings.java  SieveStone.java  SieveStore.java
src/main/java/teacommontea/Veritesauver/: Entry.java  Sauver.java  SauverChat.java  SauverCheatBridge.java  SauverConfig.java  SauverDAO.java  SauverDuration.java  SauverEngine.java  SauverEvents.java  SauverExempt.java  SauverGeoIp.java  SauverLimits.java  SauverListeners.java  SauverLockdown.java  SauverMojang.java  SauverTemplates.java  SauverWarnActions.java
src/main/java/teacommontea/Veritevanish/: Vanish.java  VanishCommand.java  VanishEvents.java  VanishFeatures.java  VanishGhost.java  VanishLevel.java  VanishListener.java  VanishPlaceholders.java  VanishSettings.java  VeriteVanishEvent.java
src/main/java/teacommontea/captcha/: CaptchaCommand.java  CaptchaCompleteEvent.java  CaptchaKind.java  CaptchaManager.java  CaptchaMap.java  CaptchaOutcome.java  CaptchaStandard.java  PunishmentRequestedEvent.java  Tier.java
src/main/java/teacommontea/util/: Messages.java
src/main/resources/: plugin.yml
src/main/resources/sieve/: config_de.eve  config_en.eve  config_en_profanity.eve  config_es.eve  config_fr.eve  config_it.eve  config_pt.eve  confusables.txt  settings.yml
src/main/resources/sieve/updates/: manifest.txt
(+172 files in other folders)
